--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   "homepage": "https://github.com/mozilla/brick-boilerplate",
   "devDependencies": {
     "gulp": "^3.6.2",
+    "gulp-concat": "^2.2.0",
     "gulp-jshint": "^1.6.1",
-    "gulp-vulcanize": "^0.1.1"
+    "gulp-stylus": "^1.0.1"
   }
 }
