--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "brick-boilerplate",
   "version": "0.0.0",
   "description": "Empty Brick Web Component Boilerplate",
-  "main": "index.js",
+  "main": "element.html",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
