--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Empty Brick Web Component Boilerplate",
   "main": "element.html",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "./node_modules/karma/bin/karma start karma.conf.js --single-run"
   },
   "repository": {
     "type": "git",
@@ -22,16 +22,21 @@
   },
   "homepage": "https://github.com/mozilla/brick-boilerplate",
   "devDependencies": {
-    "gulp": "^3.6.2",
+    "chai": "^1.9.1",
+    "gulp": "^3.7.0",
+    "gulp-bump": "^0.1.8",
     "gulp-concat": "^2.2.0",
     "gulp-connect": "^2.0.5",
     "gulp-gh-pages": "^0.3.2",
-    "gulp-jshint": "^1.6.1",
-    "gulp-stylus": "^1.0.1"
-  },
-  "dependencies": {
-    "gulp-bump": "^0.1.8",
     "gulp-helptext": "0.0.6",
-    "gulp": "^3.7.0"
-  }
+    "gulp-jshint": "^1.6.1",
+    "gulp-karma": "0.0.4",
+    "gulp-stylus": "^1.0.1",
+    "karma": "^0.12.16",
+    "karma-chai": "^0.1.0",
+    "karma-firefox-launcher": "^0.1.3",
+    "karma-mocha": "^0.1.3",
+    "mocha": "^1.20.1"
+  },
+  "dependencies": {}
 }
