--- a/.jshintrc
+++ b/.jshintrc
@@ -1,6 +1,6 @@
 {
   "bitwise": true,
-  "browser": true
+  "browser": true,
   "camelcase": true,
   "curly": true,
   "eqeqeq": true,
@@ -14,7 +14,6 @@
   "quotmark": "single",
   "regexp": true,
   "smarttabs": true,
-  "strict": true,
   "trailing": true,
   "undef": true,
   "unused": true,
