--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
   },
   "keywords": [
     "brick",
-    "webcomponent",
-    "boilerplate"
+    "webcomponent"
   ],
   "author": "mozilla",
   "license": "ISC",
